# MobileGeodatabaseLib

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  findings.md  pyproject.toml  st_geometry_decoder.py
.claude/skills/check/: SKILL.md
.claude/skills/fix/: SKILL.md
.claude/skills/test/: SKILL.md
docs/: format.md
src/mobile_geodatabase/: __init__.py  cli.py  converters.py  database.py  decoder.py  geometry.py
tests/: __init__.py  test_converters.py  test_decoder.py  test_geometry.py  test_integration.py
