[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobile-geodatabase"
version = "0.1.0"
description = "Read Esri Mobile Geodatabase (.geodatabase) files without proprietary dependencies"
readme = "README.md"
license = "MIT"
authors = [
    { name = "MobileGeodatabaseLib Contributors" }
]
keywords = [
    "esri",
    "geodatabase",
    "gis",
    "geospatial",
    "st_geometry",
    "sqlite",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "fiona>=1.9.0",
    "pyproj>=3.6.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pre-commit>=4.0.0",
]

[project.scripts]
mobile-geodatabase = "mobile_geodatabase.cli:main"

[project.urls]
Homepage = "https://github.com/foundatron/MobileGeodatabaseLib"
Repository = "https://github.com/foundatron/MobileGeodatabaseLib"
Issues = "https://github.com/foundatron/MobileGeodatabaseLib/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mobile_geodatabase"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (click pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["mobile_geodatabase"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
